Bug:  PRD Reviewer:  Self Comments:  Changes for Neutron integration.  {253rd} 1. Fixed the next/previous buttons in View Details view to work    correctly when the default column/sort order is in effect. 2. Removed the horizontal scroll bars from the comments widget hosted    in View Details.
Files:
M    gwt/src/org/kablink/teaming/gwt/server/util/GwtServerHelper.java
M    gwt/src/org/kablink/teaming/gwt/server/util/GwtViewHelper.java
M    gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
M    gwt/src/org/kablink/teaming/gwt/public/GwtFolderEntryView.css
M    main/src/org/kablink/teaming/web/util/BinderHelper.java

--- a/trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtFolderEntryView.css
+++ b/trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtFolderEntryView.css
@@ -96,7 +96,7 @@
 		.vibe-feView_commentsComposite-addCommentPanel-nonIE  {width: 100%; }
 		.vibe-feView_commentsComposite-addCommentTextArea     {background-color: white; font-family: Arial, Helvetica, sans-serif; font-size: 14px; width: 280px; height: 45px; padding: 5px; border: 1px solid #E0E0E0; -moz-border-radius: 3px; border-radius: 3px; -webkit-border-radius: 3px;}
 		.vibe-feView_commentsComposite-captionImg             {width: 36px; height: 36px;}
-		.vibe-feView_commentsComposite-commentsWidget         {height: 300px; overflow: auto; width: 330px;}
+		.vibe-feView_commentsComposite-commentsWidget         {height: 300px; overflow-x: hidden; overflow-y: auto; width: 330px;}
 		.vibe-feView_commentsComposite-label                  {}
 		.vibe-feView_commentsComposite-panel                  {}
 		.vibe-feView_commentsComposite-sendButton-nonIE       {float:right;}
@@ -162,7 +162,7 @@
 		.vibe-feComposite-commentsHeadInner  {border-bottom: 1px solit #CCC; display: block;}
 		.vibe-feComposite-commentsHeadTitle  {position: relative; font-size: 13px; height: 16px; padding: 6px 5px 4px 50px; display: block; color: white; font-weight: bold; padding: 5px;}
 		.vibe-feComposite-commentsHeadSlider {margin-right: 8px;}
-		.vibe-feComposite-contentPanel       {position: relative; padding: 10px; overflow: auto;}
+		.vibe-feComposite-contentPanel       {position: relative; padding: 10px; overflow-x: hidden; overflow-y: auto;}
 		.vibe-feComposite-footerPanel        {padding-bottom: 10px; border-top: 1px solid #CCC;}
 		.vibe-feComposite-navNextImg         {cursor: pointer;}
 		.vibe-feComposite-navPanel           {position: relative; display: inline; white-space: nowrap;}
